fix x-overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ p {
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
@@ -539,7 +540,10 @@ table, th, td {
         font-family: Audiowide, sans-serif;
         font-size: 2rem;
         font-weight: 600;
-        margin: 0;
+        width: 70%;
+        margin-top: 2vh;
+        margin-left: 15%;
+        text-align: center !important;
     }
     
     .form-row {
